[package]
name = "tijdweg"
version = "0.1.0"
authors = ["Ard-Jan van Etten <ardjanve@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = "3.5.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"
